2007-12-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm:  #define PASTEL_PALETTE and associated comments to
	allow palette-based plots to use a partially saturated fill style.

2007-12-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Implement dashed lines. Extend color support to
	include TC_LT. Assign color and dash attributes to individual paths,
	rather than inheriting them from the style of the surrounding group
	environment. 

	* src/set.c (set_termoptions):  Allow set termoption {dashed|solid}.

	* src/term_api.h:  Add an explicit terminal flag TERM_CAN_DASH
	to indicate that the terminal can toggle between solid and dashed lines.

	* src/set.c (set_termoptions): Check flag before trying to call
	current terminal with either dashed or solid.

	* term/aquaterm.trm term/cairo.trm term/cgm.trm term/emf.trm
	term/fig.trm term/metapost.trm term/pdf.trm term/post.trm term/svg.trm
	term/tgif.trm term/x11.trm term/xlib.trm:  Add flag TERM_CAN_DASH

	* term/cairo.trm (cairotrm_set_color): When switching color via
	TC_LT, be careful not to change the dash pattern also.

2007-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h (STORE_WITH_LOG_AND_UPDATE_RANGE): Add a new parameter
	that turns off autoscaling on a per-plot basis rather than per-axis.

	* src/datafile.c src/graph3d.h src/graphics.c src/graphics.h
	src/interpol.c src/plot2d.c src/plot3d.c: Corresponding modification
	to all the call sites.

	* src/graphics.c (do_plot recheck_ranges): Before drawing the plots,
	fill in the INRANGE/OUTRANGE flags for plots with noautoscale set.

	* src/datafile.c (df_open): Parse "noautoscale" keyword.

2007-12-17  Lars Hecking  <lhecking@users.sourceforge.net>

	* share/Makefile.am: Gnuplot is generated by make and deleted by
	'make clean'. Bring variable names in line with xorg.

2007-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (int_error): Fix incorrect handling of va_list.
